<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity">

    <EditText
        android:id="@+id/access_code_value"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="Enter Access Code"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@drawable/style_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_value"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:hint="Enter email"
        android:background="@drawable/style_button"
        app:layout_constraintBottom_toTopOf="@+id/admin_login"
        app:layout_constraintEnd_toEndOf="@+id/access_code_value"
        app:layout_constraintStart_toStartOf="@+id/access_code_value"
        app:layout_constraintTop_toBottomOf="@+id/access_code_value"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:width="360dp"
        android:height="70dp"
        android:paddingStart="36dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:text="Login"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_value"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>