<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_styling"
        android:orientation="vertical"
        android:id="@+id/chat_header"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/layout_shadow"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="4dp">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:id="@+id/back_btn"
                android:layout_weight="2"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/chat_header_name"
                android:fontFamily="@font/poppins_semibold"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_weight="8"
                android:layout_marginTop="8dp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/video_call"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_videocam_24"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/calendar_invite"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_calendar_month_24"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/report_user"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:src="@drawable/baseline_report_problem_24"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ai_switch"
                android:layout_marginEnd="8dp"
                app:showText="false"
                android:text="Toggle Ai  "
                android:textOff="Off"
                android:textOn="On"
                app:thumbTintMode="multiply"
                app:thumbTint="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_messages"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/chat_header"
        android:elevation="1dp"
        android:alpha="1">
        <ImageView
            android:id="@+id/langsync_spinner"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/langsync_logo"
            android:layout_gravity="center"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_messages_text"
            android:textAlignment="center"
            android:padding="32dp"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:id="@+id/no_matches_text"/>

    </androidx.cardview.widget.CardView>



    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:id="@+id/msg_recycler_view"
        tools:listitem="@layout/chat_message_item"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_header"
        app:layout_constraintBottom_toTopOf="@id/send_msg_footer"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/layout_shadow"
        android:padding="4dp"
        android:elevation="4dp"
        android:id="@+id/send_msg_footer">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msg_input"
            android:layout_margin="4dp"
            android:padding="12dp"
            android:layout_weight="1"
            android:hint="@string/message_hint"
            android:background="@drawable/message_input_styling"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_send_24"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>