<resources>
    <string name="app_name">LangSync</string>
    <string name="base_url">https://langsyncapp.canadacentral.cloudapp.azure.com/</string>
    <string name="login_with_google">Login with Google</string>
    <string name="signup_with_google">Sign Up with Google</string>
    <string name="logo_text">LangSync</string>
    <string name="sign_up_text"><u>Don\'t have an account? Sign up</u></string>
    <string name="have_account"><u>Already have an account? Login</u></string>
    <string name="title_matches">Matches</string>
    <string name="title_chat">Chat</string>
...
    <string name="meeting_successful">Meeting created</string>
    <string name="select_all_meeting_details">Please, select all meeting details</string>
    <string name="invited_user_id_key">INVITED_USER</string>
    <string name="channel_key">CHANNEL_KEY</string>
    <string name="video_call_text">Video Call</string>
    <string name="video_call_leave">Leave Video Call</string>
    <string name="admin_login_text">Have an admin access code? Login here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="toggle_ai">Toggle Ai</string>
    <string name="loading_messages">Loading Messages</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout successfully</string>
    <string name="error_get_events">Error getting events</string>
...
